--- a/vue-admin-template/src/styles/index.scss
+++ b/vue-admin-template/src/styles/index.scss
@@ -3,6 +3,7 @@
 @import './transition.scss';
 @import './element-ui.scss';
 @import './sidebar.scss';
+@import './typograhy.scss';
 
 body {
   height: 100%;
@@ -10,6 +11,7 @@ body {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
+  background: #f2f5fb;
 }
 
 label {
@@ -67,13 +69,31 @@ div:focus {
 .filter-container{
   padding: 0 $basePadding;
 }
+.el-button{
+  i{
+    font-size: 16px;
+  }
+}
 .buttons-row{
 
   .el-button,
-  .el-switch{
+  .el-switch,
+  .el-checkbox{
     margin-bottom: $baseMargin*2;
     margin-left: $baseMargin;
     margin-right: $baseMargin;
+
+    i{
+      color: $themeColor;
+    }
+    &--primary{
+      i{
+        color: #fff;
+      }
+    }
+    &__label{
+      color: #606266!important;
+    }
   }
   .el-switch{
     vertical-align: sub;
@@ -93,6 +113,19 @@ div:focus {
 .el-dialog.is-fullscreen{
   max-width: initial;
 }
+.button-custom{
+  border: none;
+  border-radius: $baseButtonBorderRadius;
+  box-shadow: $baseButtonBoxShadow;
+
+}
+
+.el-table{
+  width: 100%;
+  border-radius: $baseButtonBorderRadius;
+  box-shadow: $baseButtonBoxShadow;
+}
+
 
 @media only screen and (max-width: 576px) {
   .el-dialog{
