--- a/vue-admin-template/src/styles/index.scss
+++ b/vue-admin-template/src/styles/index.scss
@@ -46,6 +46,30 @@ a:hover {
   text-decoration: none;
 }
 
+
+.w-100{
+  width: 100%;
+}
+
+.m-30{
+  margin: 30px;
+}
+
+.pl-20{
+  padding-left:20px;
+}
+.pb-20{
+  padding-bottom: 20px;
+}
+.py-20{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.p-20{
+  padding: 20px;
+}
+
 div:focus {
   outline: none;
 }
