vlad imported roles

--- a/vue-admin-template/src/styles/index.scss
+++ b/vue-admin-template/src/styles/index.scss
@@ -54,7 +54,9 @@ a:hover {
 .m-30{
   margin: 30px;
 }
-
+.mb-20{
+  margin-bottom: 20px;
+}
 .pl-20{
   padding-left:20px;
 }
@@ -70,6 +72,37 @@ a:hover {
   padding: 20px;
 }
 
+
+.blue-btn{
+  border-color: #28a5e0;
+  background-color: #28a5e0;
+}
+.blue-btn:hover,.blue-btn:active,.blue-btn:focus{
+  border-color: #32aee8;
+  background-color: #32aee8;
+}
+
+
+
+
+.el-pagination.is-background .el-pager li:not(.disabled).active {
+  background-color: #28a5e0;
+}
+.el-pagination.is-background .el-pager li:not(.disabled):hover {
+  color: #28a5e0;
+}
+.cell a{
+color: #28a5e0;
+}
+.el-checkbox__input.is-checked .el-checkbox__inner, .el-checkbox__input.is-indeterminate .el-checkbox__inner {
+  background-color: #28a5e0;
+  border-color: #28a5e0;
+}
+
+
+.el-table{
+  font-size: 12px;
+}
 div:focus {
   outline: none;
 }
