--- a/vue-admin-template/src/styles/index.scss
+++ b/vue-admin-template/src/styles/index.scss
@@ -107,6 +107,15 @@ div:focus {
   outline: none;
 }
 
+.no-data-info{
+  text-align: center;
+  color: #d9d9d9;
+  font-weight: 500;
+  padding: 0 20px;
+  font-size: 14px;
+}
+
+
 .clearfix {
   &:after {
     visibility: hidden;
