vlad added commands layout

--- a/vue-admin-template/src/styles/index.scss
+++ b/vue-admin-template/src/styles/index.scss
@@ -571,6 +571,13 @@ div:focus {
 
 }
 
+.el-table--border::after, .el-table--group::after, .el-table::before {
+  background-color: transparent;
+}
+
+.border-bottom{
+  border-bottom: 1px solid #e3e3e3;
+}
 
 .bg-white .el-dialog {
   background-color: #ffffff !important;
