--- a/vue-admin-template/src/styles/index.scss
+++ b/vue-admin-template/src/styles/index.scss
@@ -56,7 +56,9 @@ a:hover {
 .mb-0{
   margin-bottom: 0px;
 }
-
+.mt-20{
+  margin-top: 20px;
+}
 .mt-25{
   margin-top: 25px;
 }
@@ -74,6 +76,12 @@ a:hover {
 }
 .mb-30{
   margin-bottom: 30px;
+}
+.mr-10{
+  margin-right: 10px;
+}
+.pl-5{
+  padding-left: 5px;
 }
 .pl-20{
   padding-left:20px;
