--- a/vue-admin-template/src/styles/index.scss
+++ b/vue-admin-template/src/styles/index.scss
@@ -291,6 +291,10 @@ div:focus {
   margin-top: 30px;
   border-radius: 5px;
 }
+
+.full-size-pagination{
+  margin: 30px 20px;
+}
 .no-data-info{
   text-align: center;
   color: #d9d9d9;
